--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 DEEPL_API_KEY=enter_your_deepl_api_key
 GOOGLE_API_KEY=enter_your_google_api_key
+NOCO_DB_URL=enter_your_noco_db_url
+NOCO_XC_AUTH=enter_your_noco_jwt_token
