--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,7 +12,7 @@ on:
       - main
 
 jobs:
-  build:
+  scraper:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r scraper/requirements.txt
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v5
         if: github.ref == 'refs/heads/main'
         with:
-          context: .
+          context: ./scraper
           push: true
           tags: hicsail/gdp-flask:staging
           build-args: |
