chore: update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 NOCO_DB_URL=enter_your_noco_db_url
 NOCO_XC_TOKEN=enter_your_noco_api_token
+DEEPL_API_KEY=enter_your_deepl_api_key
+GOOGLE_API_KEY=enter_your_google_api_key
+LLM_URL=enter_your_llm_api_url
