--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -10,6 +10,8 @@ ARG NOCO_XC_TOKEN
 ENV NOCO_DB_URL=${NOCO_DB_URL}
 ENV NOCO_XC_TOKEN=${NOCO_XC_TOKEN}
 
+ENV PYTHONUNBUFFERED=1
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5001
