--- a/translator/Dockerfile
+++ b/translator/Dockerfile
@@ -14,6 +14,8 @@ ENV NOCO_XC_TOKEN=${NOCO_XC_TOKEN}
 ENV DEEPL_API_KEY=${DEEPL_API_KEY}
 ENV GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
+ENV PYTHONUNBUFFERED=1
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5002
