chore: set python stdout buffer to 1

--- a/classifier/Dockerfile
+++ b/classifier/Dockerfile
@@ -12,6 +12,8 @@ ENV NOCO_DB_URL=${NOCO_DB_URL}
 ENV NOCO_XC_TOKEN=${NOCO_XC_TOKEN}
 ENV LLM_URL=${LLM_URL}
 
+ENV PYTHONUNBUFFERED=1
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5001
