scrape new articles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,22 @@ services:
       - 5001:80
     env_file:
       - .env
-  translator:
-    container_name: gdp-flask-translator
-    build:
-      context: ./translator
-    restart: always
-    ports:
-      - 5002:80
-    env_file:
-      - .env
-  classifier:
-    container_name: gdp-flask-classifier
-    build:
-      context: ./classifier
-    image: hicsail/gdp-flask-classifier:staging
-    restart: always
-    ports:
-      - 5003:80
-    env_file:
-      - .env
+  # translator:
+  #   container_name: gdp-flask-translator
+  #   build:
+  #     context: ./translator
+  #   restart: always
+  #   ports:
+  #     - 5002:80
+  #   env_file:
+  #     - .env
+  # classifier:
+  #   container_name: gdp-flask-classifier
+  #   build:
+  #     context: ./classifier
+  #   image: hicsail/gdp-flask-classifier:staging
+  #   restart: always
+  #   ports:
+  #     - 5003:80
+  #   env_file:
+  #     - .env
